basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 
spec:
  selector:
    matchLabels:
      app: 
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate                                   
    rollingUpdate: 
      maxUnavailable: 1                                   
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: 
    spec:
      containers:
      - name: 
        image:
        imagePullPolicy: Always
        ports:
        - containerPort: 
        readinessProbe:
          httpGet:
            path: /healthz
            port: 
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /healthz
            port: 
          initialDelaySeconds: 15
          timeoutSeconds: 1
        resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits: 
              cpu: "100m"
              memory: "256Mi"
        volumeMounts:
        - name: 
          mountPath: 
      volumes:
      - name: 
        persistentVolumeClaim:
          claimName: my-nfs-cliam
---
apiVersion: v1
kind: Service
metadata:
  name: 
  labels:
    app: 
spec:
  type: NodePort
  ports:
  - port: 
    protocol: TCP
    targetPort: 
    nodePort: 
  selector:
    app:
