external.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new
spec:
  selector:
    matchLabels:
      app: pets
  replicas: 1
  template:
    metadata:
      labels:
        app: pets
    spec:
      containers:
      - name: canp
        image: psrikanth89/pets:v1
        ports:
        - containerPort: 8020
---
apiVersion: v1
kind: Service
metadata:
  name: sepe
  labels:
    app: pets
spec:
  type: ClusterIP
  ports:
  - port: 8020
    protocol: TCP
    targetPort: 8085
  externalIPs:
  - 80.11.12.10
  selector:
    app: pets
