hpaworked.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depe
spec:
  selector:
    matchLabels:
      app: pets
  replicas: 2
  template:
    metadata:
      labels:
        app: pets
    spec:
      containers:
      - name: canp
        image: psrikanth89/pets:v1
        ports:
        - containerPort: 8030
        resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits: 
              cpu: "100m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: sepe
  labels:
    app: pets
spec:
  type: NodePort
  ports:
  - port: 8030
    protocol: TCP
    nodePort: 32000
    targetPort: 8085
  selector:
    app: pets
