myshuttle.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      app: pets
  replicas: 1
  template:
    metadata:
      labels:
        app: pets
    spec:
      containers:
      - name: canp
        image: kanthreg.azurecr.io/myshuttle:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: test
---
apiVersion: v1
kind: Service
metadata:
  name: sepe
  labels:
    app: pets
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8080
  selector:
    app: pets
