nodesel.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      app: pets
  replicas: 5
  template:
    metadata:
      labels:
        app: pets
    spec:
      containers:
      - name: canp
        image: kanthreg.azurecr.io/petclinic:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8020
      imagePullSecrets:
      - name: petsecret
      nodeSelector:
        disktype: ssd
---
apiVersion: v1
kind: Service
metadata:
  name: sepe
  labels:
    app: pets
spec:
  type: LoadBalancer
  ports:
  - port: 8020
    protocol: TCP
    targetPort: 8085
  selector:
    app: pets
