repcanp.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: hellopod
  namespace: dev
  labels:
    app: pets1
spec:
  containers:
  - name: canp
    image: psrikanth89/pets:v1
    ports:
    - containerPort: 8030
---
---
apiVersion: v1
kind: Service
metadata:
  name: sepe1
  namespace: dev
  labels:
    app: pets1
spec:
  type: LoadBalancer
  ports:
  - port: 8030
    protocol: TCP
    nodePort: 30036
    targetPort: 8085
  selector:
    app: pets1
