repcanwp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sepe1
  namespace: dev
  labels:
    app: pets1
spec:
  type: NodePort
  ports:
  - port: 8030
    protocol: TCP
    nodePort: 30036
    targetPort: 8085
  selector:
    app: pets1
