repset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sepe3
  namespace: dev
  labels:
    app: pets1
spec:
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 30037
    targetPort: 8085
  selector:
    app: pets1
