sonar-pvc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonarqube-deployment
  labels:
    app: sonarqube
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonar-conatiner
        image: sonarqube:7.4-community
        imagePullPolicy: Always
        ports:
        - name: sonar-port
          containerPort: 9000
        volumeMounts:
         - name: sonar-data-disk
           mountPath: /opt/sonarqube/data
      volumes:
      - name: sonar-data-disk
        persistentVolumeClaim:
          claimName: sonar-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-svc
  labels:
    name: sonarqube
spec:
  type: NodePort
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: sonarqube
