sonar-without-pvc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sonarqube-deployment1
  labels:
    app: sonarqube1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarqube1
    spec:
      containers:
      - name: sonar-conatiner
        image: sonarqube:7.4-community
        imagePullPolicy: Always
        ports:
        - name: sonar-port
          containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-svc1
  labels:
    name: sonarqube1
spec:
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
    nodePort: 31000
  selector:
    app: sonarqube1
